# wow_wtf_manager-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  poetry-lock-hash.json  pygitrepo-config.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  requirements_backup.txt  setup.py
.github/workflows/: main.yml
app/: README.rst
app/e03_wotlk_acore/: README.rst  run.py
app/e03_wotlk_acore/01_game_client/: 1176-664-minimal-graphic-sound.txt
app/e03_wotlk_acore/12_account_macros/: default.txt
app/e03_wotlk_acore/24_character_layout/: default.txt
app/e03_wotlk_acore_horde/: README.rst  run.py
app/e03_wotlk_example/: run.py
app/e05_mop/: run.py
app1/e03_wotlk_example/: run.py
backup/sdm/: __init__.py  lua.py  model.py  saved_variable.py  sdm.tpl  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
lambda_app/: app.py
lambda_app/.chalice/: config.json
project/e03_wotlk_acore/: run.py
project/e03_wotlk_dalan335/: .gitignore  run.py
project/e03_wotlk_warmane/: run.py
project/e05_mop/: run.py  run.sh
project/mop/: run.py
project/wotlk/: run.py
tests/: README.rst  all.py  test_03_wotlk_wtf.py  test_api.py  test_app_e03_wotlk_warmane.py  test_e03_wotalk_macro.py  test_e03_wotlk_group.py  test_e03_wotlk_macro.py  test_e03_wotlk_myslot.py  test_exp_e03_wotlk_sdm_model.py  test_lua_lib.py
tests/app/: README.rst  test_app_e03_wotlk_acore.py  test_app_e03_wotlk_acore_sdm.py  test_app_e03_wotlk_example.py
tests/app1/: test_app1_e03_wotlk_example.py
tests/config/: all.py  test_config_api.py  test_config_base.py  test_config_file.py
tests/macro/: account-macro.txt  game_client_file_backup.txt  macros_data_file.txt
tests/models/: all.py  test_models_acc_realm_char.py  test_models_api.py  test_models_client.py  test_models_utils.py
tests/myslot/: flychicken.txt
tests/scope/: all.py  test_scope_api.py  test_scope_client.py
tests_backup/: test_exp_e05_mop_macro.py  test_import.py
tests_backup/app/: test_app_e03_wotlk_acore.py
tests_int/: test_app_e03_wotlk_acore_horde.py  test_app_e03_wotlk_example.py  test_app_e03_wotlk_warmane.py  test_app_e05_mop_tauri.py
tests_int/app1/: test_app1_e03_wotlk_example.py
wow_wtf_manager/: __init__.py  api.py  compat.py  logger.py  lua_lib.py  paths.py  runtime.py
wow_wtf_manager/config/: __init__.py  api.py  base.py  file.py  file_config.py
wow_wtf_manager/exp/: __init__.py
wow_wtf_manager/models/: __init__.py  acc_realm_char.py  api.py  base.py  client.py  utils.py
wow_wtf_manager/scope/: __init__.py  api.py  base.py  client.py
wow_wtf_manager/tests/: helper.py
(+842 files in other folders)
