# this is just for integration test purpose, it is not used for publishing to PyPI, we use setup.py
# for some manual test, you need to make a copy of this and rename it to ``pyproject.toml``
[tool.poetry]
name = "wow_wtf_manager"
version = "0.1.1"
description = "Manager your World of Warcraft WFT configuration at scale."
license = "MIT"
authors = ["Sanhe Hu <husanhe@gmail.com>"]
maintainers = ["Sanhe Hu <husanhe@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/MacHu-GWU/wow_wtf_manager-project"
documentation = "https://wow-wtf-manager.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0" # this is just for integration test purpose, it doesn't mean that we only support 3.8+
attrs = "22.2.0"
attrs-mate = ">=1.1.2,<2.0.0"
Jinja2 = ">=3.1.2,<4.0.0"
lupa = ">=2.2,<3.0"
ordered-set = "4.1.0"
pathlib-mate = "1.3.2"
PyYAML = "6.0.1"
rich = ">=13.7.1,<14.0.0"
superjson = ">=1.0.2,<2.0.0"
toml = ">=0.10.2,<1.0.0"


# --- addtitional dependencies for development
[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pathlib_mate = "*" # path manipulation
twine = "*" # make distribution archive
wheel = "*" # make pre-compiled distribution package
build = "*" # build distribution package


# --- addtitional dependencies for building documentations
[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]
Sphinx = "5.3.0"
sphinx-jinja = "2.0.2"
sphinx-copybutton = "0.5.1"
sphinx-design = "0.5.0"
furo = "2023.03.27"
nbsphinx = "0.8.12"
rstobj = "1.2.1"
pygments = "2.15.1"
ipython = "8.10.0"
docfly = "2.0.3"


# --- addtitional dependencies for testing
[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest-cov = "*"
pytest = "*"

# --- addtitional dependencies for automation shell scripts
[tool.poetry.group.auto]
optional = true

[tool.poetry.group.auto.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
